fixed misalignment issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ h1{
      vertical-align: middle;
      width: 1200px;
      height: 800px;
-     margin: auto;
+    // margin: auto;
 }
  #firstpage{
      padding-top: 15%;
